# Projekt-AiZO

./: .gitignore  CMakeLists.txt  data_parser.h  main  main.cpp  test  tester.h
UI/: GUI.cpp  GUI.h  GUI.tpp  heapsortGUI.h  quicksortGUi.h  shellsortGUI.h  testEverything.h  testHeapSort.h  testInserSort.h  testQuickSort.h  testShellSort.h
data/: HeapSort100000float0%.txt  HeapSort100000float33%.txt  HeapSort100000float66%.txt  HeapSort100000int0%.txt  HeapSort100000int33%.txt  HeapSort100000int66%.txt  HeapSort10000float0%.txt  HeapSort10000float33%.txt  HeapSort10000float66%.txt  HeapSort10000int0%.txt  HeapSort10000int33%.txt  HeapSort10000int66%.txt  HeapSort25000float0%.txt  HeapSort25000float33%.txt  HeapSort25000float66%.txt  HeapSort25000int0%.txt  HeapSort25000int33%.txt  HeapSort25000int66%.txt  HeapSort40000float0%.txt  HeapSort40000float33%.txt  HeapSort40000float66%.txt  HeapSort40000int0%.txt  HeapSort40000int33%.txt  HeapSort40000int66%.txt  HeapSort55000float0%.txt  HeapSort55000float33%.txt  HeapSort55000float66%.txt  HeapSort55000int0%.txt  HeapSort55000int33%.txt  HeapSort55000int66%.txt  HeapSort70000float0%.txt  HeapSort70000float33%.txt  HeapSort70000float66%.txt  HeapSort70000int0%.txt  HeapSort70000int33%.txt  HeapSort70000int66%.txt  HeapSort85000float0%.txt  HeapSort85000float33%.txt  HeapSort85000float66%.txt  HeapSort85000int0%.txt  (+469 more)
generator/: DataGenerator.cpp  DataGenerator.h  DataGenerator.tpp
heap_sort/: HeapSort.cpp  heap_sort.h
quick_sort/: QuickSort.cpp  QuickSort.h
sorting_algorithms/: heap_sort.h  insertion_sort.h  (+1 more)
(+17 files in other folders)
